--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Matthias Stahl",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "sequelize": "^4.42.0",
     "sqlite3": "^4.0.4"
