--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^4.42.0",
     "sqlite3": "^4.0.4"
   },
