--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
