--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "sequelize": "^5.19.0",
-    "sqlite3": "^4.1.0"
+    "pg": "^8.7.3",
+    "sequelize": "^5.19.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
